# SPMiner_learn

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements-pip.txt  test_orbitsi.py  tmp_analyze_as733.py  tmp_analyze_formal.py
.claude/: settings.local.json
analyze/: count_patterns.py
common/: batch_utils.py  config_base.py  data.py  feature_preprocess.py  graph_utils.py  models.py  train_utils.py  utils.py
docs/: compare_analysis.md
docs/notebooks/: Analyze Embeddings.zh.ipynb  Count Pattern Frequencies.zh.ipynb  Mine Frequent Subgraphs.zh.ipynb  Train Subgraph Matching.zh.ipynb  Visualize Graph Statistics.zh.ipynb
main/: COMMANDS.md  __init__.py  analyze.py  config.py  download_as733.py  er_baseline.py  experiment.py  run_all.py  sbm_generator.py
scripts/: compare_networkx_old_new.py  mining_benchmark.py  prepare_ppi_data.py  run.sh
src/: __init__.py  logger.py
src/analyze/: __init__.py  analyze_pattern_counts.py  count_patterns.py  count_patterns_0.py
src/compare/: README.md  __init__.py  analysis.py  benchmarking.py  build_gspan_db.py  compare.py  evaluate_isomorphism_accuracy.py  plotting.py  visualize_mined_subgraphs.py
src/core/: __init__.py  artifacts.py  batch.py  cli.py  combined_syn.py  config.py  data.py  dataset_provider.py  dataset_registry.py  device.py  facade.py  feature_preprocess.py  hashing.py  model_factory.py  models.py  optimizer.py  runtime_context.py  utils.py
subgraph_matching/: alignment.py  config.py  test.py  train.py
subgraph_mining/: config.py  decoder.py  search_agents.py
(+34 files in other folders)
